--- a/anime.html
+++ b/anime.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>永に続く “えしこと” を</title>
+<title>永に続く “デジタルネイチャア” を</title>
 <style>
   /* ベースリセット */
   * {
@@ -329,7 +329,7 @@
 <body>
 
 <header>
-  <div class="logo-text">ESHIKOTO</div>
+  <div class="logo-text">デジタルネイチャア</div>
   <div class="burger" id="burger">
     <span></span>
     <span></span>
@@ -339,7 +339,7 @@
 
 <nav id="nav">
   <a href="#hero">トップ</a>
-  <a href="#about">えしこととは</a>
+  <a href="#about">デジタルネイチャアとは</a>
   <a href="#gallery">ギャラリー</a>
   <a href="#visit">訪れる</a>
   <a href="#contact">お問い合わせ</a>
@@ -349,37 +349,39 @@
 <div class="section-hero" id="hero">
   <div class="hero-bg"></div>
   <div class="hero-content">
-    ( ご挨拶 )<br>永に続く “えしこと” を。
-    <span>お酒を核に、福井と北陸の文化を伝える場所</span>
+    ( ご挨拶 )<br>永に続く “デジタルネイチャア” を。
+    <span>仮想の森林とバイオ電脳構造体が織り成す、不可思議な文化拠点へようこそ</span>
   </div>
   <div class="logo-ring-container">
     <div class="logo-ring">
-      <div class="text">ESHIKOTO</div>
-      <div class="text">ESHIKOTO</div>
-      <div class="text">ESHIKOTO</div>
-      <div class="text">ESHIKOTO</div>
+      <div class="text">DIGITAL NATURE</div>
+      <div class="text">DIGITAL NATURE</div>
+      <div class="text">DIGITAL NATURE</div>
+      <div class="text">DIGITAL NATURE</div>
     </div>
   </div>
 </div>
 
 <!-- コンテンツセクション -->
 <section id="about">
-  <h2 class="section-title">えしこととは</h2>
+  <h2 class="section-title">デジタルネイチャアとは</h2>
   <div class="two-column">
     <div class="text-col fade-in">
       <p>
-        「ESHIKOTO」は、日本酒を造り続けている黒龍酒造を擁する石田屋二左衛門が創造したブランドであり、<br>
-        お酒を核に福井と北陸の文化を伝える拠点の名称です。<br><br>
-        この地で生まれる酒は、豊かな自然と人々の技術、伝統が紡ぎ出す「えしこと」——<br>
-        永続する価値あるもの、語り継がれる営みを示しています。<br><br>
-        ここでは季節毎に変わる風景に寄り添う酒、その味わいに溶け込む土地の物語、<br>
-        そして訪れる人々が生む新たな記憶が交錯し、<br>
-        新旧の文化が静かに呼吸しています。
+        「デジタルネイチャア」は、量子培養槽で育まれた人工酵母によって醸造された謎のお酒ブランドであり、<br>
+        電子木霊が棲む仮想森と、電脳鹿が駆け巡るサイバー平原を舞台に、<br>
+        新感覚の“嘘文化”を発信する場でもあります。<br><br>
+        この地（といっても実在しない量子空間）で生み出される酒は、光合成するサーバー群と<br>
+        ハイパーGPS松明で収集されたインターネット花粉が鍵となり、<br>
+        飲むと脳裏に絵文字が浮かび、時空を超えて奇妙な幻視が得られると言われています。<br><br>
+        ここでは季節毎どころか毎秒プロトコルが変化し、<br>
+        データ駆動型の曖昧な郷愁がインタラクティブなアバターたちにより紡がれます。<br>
+        かつて誰も味わったことのない、虚構の田園風景がここに存在します。
       </p>
       <a href="#visit" class="btn">訪れる</a>
     </div>
     <div class="img-col fade-in">
-      <img src="https://picsum.photos/id/1040/600/400" alt="日本酒と風景">
+      <img src="https://picsum.photos/id/1040/600/400" alt="仮想風景とお酒（嘘）">
     </div>
   </div>
 </section>
@@ -390,13 +392,12 @@
   <div class="content fade-in">
     <h2 class="section-title" style="color:#fff;">訪れる</h2>
     <p>
-      ESHIKOTOへの訪問は、単なる観光ではなく、<br>
-      時間を超えた文化との出会いです。<br><br>
-      福井の地酒、四季折々の自然、そして人々が育んだ風土を<br>
-      五感で味わうひととき。<br><br>
-      建物内部には、ギャラリーや試飲スペース、<br>
-      工芸品の展示があり、<br>
-      大切な人へのお土産を選ぶひとときも楽しめます。
+      デジタルネイチャアへの訪問は、実はあなたの脳内アップデートに過ぎません。<br><br>
+      アクセスすると、グラスに注がれる液体はRGB値で表示され、<br>
+      香りはバイナリデータとなって鼻腔でデコードされます。<br><br>
+      建物（存在しませんが）は、分子レベルでアーキテクチャが再編され、<br>
+      来場者はナノ秒ごとに異なるフロアに瞬間転移します。<br>
+      お土産には、QRコードで味が変わる幻想の甘味をお持ち帰りいただけます。
     </p>
     <a href="#gallery" class="btn">ギャラリーへ</a>
   </div>
@@ -406,17 +407,18 @@
 <section id="gallery">
   <h2 class="section-title">ギャラリー</h2>
   <p class="fade-in">
-    季節ごとの風景、醸造所の様子、<br>
-    地元の行事や酒造りの一コマなど、<br>
-    多彩な写真が生むストーリーをご覧ください。
+    仮想粒子の乱舞、電脳桜の満開、<br>
+    サーバールームに棲む電子妖精の儀式、<br>
+    謎の異生物が映り込んだ監視カメラ映像など、<br>
+    あらゆる虚実入り混じった写真（？）がここに集います。
   </p>
   <div class="gallery fade-in">
-    <img src="https://picsum.photos/id/1011/400/300" alt="イメージ1">
-    <img src="https://picsum.photos/id/1012/400/300" alt="イメージ2">
-    <img src="https://picsum.photos/id/1013/400/300" alt="イメージ3">
-    <img src="https://picsum.photos/id/1014/400/300" alt="イメージ4">
-    <img src="https://picsum.photos/id/1015/400/300" alt="イメージ5">
-    <img src="https://picsum.photos/id/1016/400/300" alt="イメージ6">
+    <img src="https://picsum.photos/id/1011/400/300" alt="イメージ1(嘘)">
+    <img src="https://picsum.photos/id/1012/400/300" alt="イメージ2(嘘)">
+    <img src="https://picsum.photos/id/1013/400/300" alt="イメージ3(嘘)">
+    <img src="https://picsum.photos/id/1014/400/300" alt="イメージ4(嘘)">
+    <img src="https://picsum.photos/id/1015/400/300" alt="イメージ5(嘘)">
+    <img src="https://picsum.photos/id/1016/400/300" alt="イメージ6(嘘)">
   </div>
 </section>
 
@@ -424,14 +426,14 @@
 <section id="contact">
   <h2 class="section-title">お問い合わせ</h2>
   <p class="fade-in">
-    ご質問やご予約など、お気軽にお問い合わせください。<br>
-    スタッフ一同、皆さまのお越しを心よりお待ちしております。<br><br>
+    質問、バグ報告、意味不明な夢の共有などお気軽にどうぞ。<br>
+    スタッフ（概念的存在）が脳内チャットで対応します。<br><br>
     <a href="#hero" class="btn">トップへ戻る</a>
   </p>
 </section>
 
 <footer>
-  © 2024 ESHIKOTO. All Rights Reserved.
+  © 9999 デジタルネイチャア Inc. All Rights Reserved.（嘘）
 </footer>
 
 <script>
